# CC_ax_team

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: logic-reviewer.md  release-gate.md  workflow-executor.md  workflow-planner.md  workflow-tester.md
.claude/docs/: architecture-mindmap.md  architecture-overview.md  architecture-prompt-system.md  modular-architecture-summary.html  modular-architecture.html  modular-architecture.md  workflow-architecture.md  workflow-composition-map.md  브랜드톤관리시스템.md
.claude/hooks/: auto_validation.py  notification_windows.py  protect_sensitive.py  python_formatter.py  validate_gemini_model.py  validate_options.py  validate_outfit_analysis.py  validate_vlm_prompt.py  validate_workflow.py
.claude/prd/: ecommerce-prd.md  face-swap-prd.md  multi-face-swap-prd.md  outfit-swap-prd.md  pose-change-prd.md  pose-copy-prd.md  shoe-rack-mockup-prd.md  shoe-rack-mockup-v1.0.md  test-plan-6workflows.md  trend-content-cycle-prd.md
.claude/rules/: dcsai-business-analysis.md  (+4 more)
core/: __init__.py  options.py  outfit_analyzer.py  selfie_validator.py  storage.py
db/: background_presets.json  camera_presets.json  expression_presets.json  influencer_prompt_schema.json  pose_presets.json  visual_mood_preset_db.json
docs/: ARCHITECTURE.md  MCP_DEPLOYMENT_GUIDE.md
fnf_studio_mcp/: __init__.py  helpers.py  server.py
make-shared-resources/: CLAUDE.md
scripts/: mcp_env_setup.md  upload_db_to_s3.py  upload_preset_images_to_s3.py
skills/: README.md
(+513 files in other folders)
