[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fnf-studio-mcp"
version = "0.1.0"
description = "FNF AI Studio MCP Server - AI image generation for fashion brands"
readme = "docs/MCP_DEPLOYMENT_GUIDE.md"
requires-python = ">=3.11"
authors = [
    { name = "F&F AX Team" },
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-genai>=1.50.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
]

[project.scripts]
fnf-studio-mcp = "fnf_studio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["fnf_studio_mcp", "core"]
